objects/MC4SF__MC_Interest_Grouping__c.object
<CustomObject>
    <fields>
        <fullName>MC4SF__Form_Field__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Form Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MC4SF__MC_List__c</fullName>
        <label>MC Audience</label>
        <referenceTo>MC4SF__MC_List__c</referenceTo>
        <relationshipLabel>MC Interest Groupings</relationshipLabel>
        <relationshipName>MC_Interest_Groupings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>MC4SF__MailChimpID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>MailChimp ID</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
</CustomObject>